lenpar temp exp complete

--- a/sentence_caps.ipynb
+++ b/sentence_caps.ipynb
@@ -690,7 +690,8 @@
     "df.set_index(\"temp\", inplace=True)\n",
     "print(df)\n",
     "\n",
-    "sns.lineplot(data=df)"
+    "ax = sns.lineplot(data=df)\n",
+    "ax.set_ylabel(\"Sample Count\")"
    ]
   }
  ],
