--- a/sentence_len.ipynb
+++ b/sentence_len.ipynb
@@ -2096,6 +2096,15 @@
       "  warn(\"json_mode is on but user_query does not contain \\\"json\\\"\")\n",
       "/Users/ishangaur/classification-faithfulness/utils.py:111: UserWarning: adding prefix to user_query:\n",
       "\"Please label the following inputs. Respond in JSON format like the examples given to you above.\"\n",
+      "  warn(f\"adding prefix to user_query:\\n\\\"{json_prefix}\\\"\")\n",
+      "/Users/ishangaur/classification-faithfulness/utils.py:106: UserWarning: json_mode only supported for gpt-4-1106-preview\n",
+      "  warn(\"json_mode only supported for gpt-4-1106-preview\")\n",
+      "/Users/ishangaur/classification-faithfulness/utils.py:107: UserWarning: changing model to gpt-4-1106-preview\n",
+      "  warn(\"changing model to gpt-4-1106-preview\")\n",
+      "/Users/ishangaur/classification-faithfulness/utils.py:110: UserWarning: json_mode is on but user_query does not contain \"json\"\n",
+      "  warn(\"json_mode is on but user_query does not contain \\\"json\\\"\")\n",
+      "/Users/ishangaur/classification-faithfulness/utils.py:111: UserWarning: adding prefix to user_query:\n",
+      "\"Please label the following inputs. Respond in JSON format like the examples given to you above.\"\n",
       "  warn(f\"adding prefix to user_query:\\n\\\"{json_prefix}\\\"\")\n"
      ]
     }
