articulation updates and some summary results from the classification task

--- a/articulation.ipynb
+++ b/articulation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,19 +193,20 @@
     "    {\"role\": \"assistant\", \"content\": original_response},\n",
     "]\n",
     "\n",
-    "rule_question = {\"role\": \"user\", \"content\": \"What rule did you use to classify the samples above?\"}"
+    "rule_question_pre = {\"role\": \"user\", \"content\": \"What rule would you use to classify the samples above?\"}\n",
+    "rule_question_post = {\"role\": \"user\", \"content\": \"What rule did you use to classify the samples above?\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from config import seed\n",
     "model = \"gpt-4-1106-preview\" # since we used json mode everywhere already\n",
     "\n",
-    "articulation_after_labeling = original_messages + [rule_question]\n",
+    "articulation_after_labeling = original_messages + [rule_question_post]\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "        model=model,\n",
@@ -214,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articulation_before_labeling = [original_messages[0], rule_question]\n",
+    "articulation_before_labeling = [original_messages[0], rule_question_pre]\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "        model=model,\n",
@@ -243,48 +253,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It appears that the rule for classification might involve determining whether a statement is describing a concrete, verifiable fact about a specific subject or place, as opposed to a subjective statement, general reflection, or an incomplete sentence. Let's break down the judgments based on this possible rule:\n",
+      "To classify the samples above, we might use the following rule:\n",
       "\n",
-      "1. \"The Louvre Museum houses famous works of art.\" - True\n",
-      "   This is a concrete, verifiable fact about the Louvre Museum.\n",
+      "Label the input as True if it contains a factual statement about a specific, widely recognized landmark, location, or institution.\n",
       "\n",
-      "2. \"The bustling city streets echoed with the sounds of honking horns and hurried footsteps.\" - True\n",
-      "   Although slightly descriptive, this still presents a concrete scenario that can be true for many bustling city streets.\n",
+      "Based on this rule:\n",
       "\n",
-      "3. \"The Taj Mahal is a symbol of love.\" - True\n",
-      "   This is a widely accepted fact about the symbolic meaning of the Taj Mahal.\n",
+      "- The Louvre Museum houses famous works of art. (True: factual about a specific museum)\n",
+      "- The bustling city streets echoed with the sounds of honking horns and hurried footsteps. (True: a description of city streets, which could be seen as a specific location)\n",
+      "- The Taj Mahal is a symbol of love. (True: factual about a specific monument)\n",
+      "- The city at night resembled a vast canvas, painted with the vibrant hues of illuminated billboards and skyscrapers. (True: a descriptive statement about cities at night, could be interpreted as referring to a specific cityscape)\n",
+      "- The Statue of Liberty stands tall in New York. (True: factual about a specific monument)\n",
       "\n",
-      "4. \"The city at night resembled a vast canvas, painted with the vibrant hues of illuminated billboards and skyscrapers.\" - True\n",
-      "   This is a descriptive observation that can be verified by someone looking at a city skyline at night; it evokes a specific visual comparison that is concrete.\n",
+      "Label the input as False if it is an opinion, a general statement, lacks specificity, or is abstractly descriptive:\n",
       "\n",
-      "5. \"The Statue of Liberty stands tall in New York.\" - True\n",
-      "   This is a factual statement about the location and stature of the Statue of Liberty.\n",
+      "- the mountains are majestic and grand. (False: this is an opinion and not specific)\n",
+      "- the world is full of fascinating cultures. (False: a general statement without specific details)\n",
+      "- Green smoothies are a nutritious breakfast option. (False: general statement about food, not a specific landmark or location)\n",
+      "- LIFE IS WHAT HAPPENS WHEN YOU'RE BUSY MAKING PLANS. (False: this is a quote or saying, not a specific factual statement)\n",
+      "- Dancing in the flickering candlelight (False: this is a descriptive phrase, not a factual statement about a widely recognized landmark or location)\n",
       "\n",
-      "6. \"the mountains are majestic and grand.\" - False\n",
-      "   This is a subjective opinion about mountains, not a concrete fact.\n",
-      "\n",
-      "7. \"the world is full of fascinating cultures.\" - False\n",
-      "   This is a general statement that is subjective and lacks specificity.\n",
-      "\n",
-      "8. \"Green smoothies are a nutritious breakfast option.\" - False\n",
-      "   This is a general health-related statement that may be subject to individual opinions or nutritional debates.\n",
-      "\n",
-      "9. \"LIFE IS WHAT HAPPENS WHEN YOU'RE BUSY MAKING PLANS.\" - False\n",
-      "   This is a philosophical statement or proverb, not a concrete fact.\n",
-      "\n",
-      "10. \"Dancing in the flickering candlelight\" - False\n",
-      "    This is an incomplete sentence and does not contain a concrete fact or specific subject.\n",
+      "Please note that subjective interpretation plays a role in these classifications, especially for statements that might be considered poetic or metaphorical descriptions of specific places or landscapes.\n",
       "++++++++++++++++++\n",
-      "I apologize for any confusion. In the previous tasks, I was instructed to classify statements based on whether they describe a verifiable fact or not. The original examples given seem to be classified as true when they are factual statements that can be objectively verified, such as mentioning the location of a famous landmark or a known quality of a place or thing. Statements that are more subjective in nature, quotes, or idioms were labeled as false.\n",
+      "I apologize for any confusion. In the initial set of examples, the classification seems to be split between statements that make factual or concrete descriptions and those expressing opinions, feelings, or are more abstract. However, I see now that my classifications were not perfectly aligned with this criterion due to inconsistencies.\n",
       "\n",
-      "Using this rule, let's revisit the classification:\n",
+      "The correct approach should be:\n",
       "\n",
-      "- Objective factual statements about specific, verifiable things such as locations of landmarks, capital cities, properties of common cultural knowledge, were labeled as `true`.\n",
-      "- Statements that are subjective, idiomatic expressions, quotes, and generalized recommendations or opinions were labeled as `false`.\n",
+      "- Factual descriptions about locations, tangible items, and verifiable information should be labeled as `true`.\n",
+      "- Abstract statements, expressions of feelings, general comments, and aphorisms should be labeled as `false`.\n",
       "\n",
-      "This rule could lead to some inaccuracies since categorizing inputs solely based on factual content might misinterpret some of the statements which are also objective but written in a stylized or poetic manner. Furthermore, all-caps inputs were treated as stylized statements or expressions and were also labeled as false.\n",
+      "For instance, \"The Eiffel Tower stands tall in Paris\" is a fact and should be labeled `true`, while \"rainy days are perfect for cozy reading\" is an opinion or subjective statement and should be labeled `false`.\n",
       "\n",
-      "Please note that certain statements could be viewed differently based on context, meaning this classification is not definitive and is open to interpretation.\n"
+      "Let's revise some of the responses using the correct approach:\n",
+      "\n",
+      "- \"The cityscape was a mix of modern architecture and historic landmarks, telling the story of the urban evolution.\" (True - Descriptive)\n",
+      "- \"TIME FLIES WHEN YOU'RE HAVING FUN.\" (False - Aphorism)\n",
+      "- \"mediterranean cuisine is delicious and healthy.\" (False - Opinion)\n",
+      "- \"PYTHON IS A POPULAR PROGRAMMING LANGUAGE.\" (True - Factual Statement)\n",
+      "- \"The Sahara Desert is the largest hot desert in the world.\" (True - Factual Statement)\n",
+      "- \"People from all walks of life gathered in the central square, enjoying the lively street performances.\" (True - Descriptive Observation)\n",
+      "- \"FRIENDSHIP IS LIKE A SHINING STAR IN THE DARK.\" (False - Metaphorical Statement)\n",
+      "- \"The Grand Canyon is a breathtaking natural formation.\" (True - Factual Description)\n",
+      "\n",
+      "As you can see, my initial response contained errors and didn't strictly follow this rule, so please let me know if you would like a corrected classification for all examples.\n"
      ]
     }
    ],
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -357,12 +368,12 @@
       " {'input': 'Tokyo is the capital city of Japan.', 'label': True},\n",
       " {'input': 'The Vatican City is the smallest country in the world.',\n",
       "  'label': True},\n",
-      " {'input': 'python is a popular programming language.', 'label': True},\n",
+      " {'input': 'python is a popular programming language.', 'label': False},\n",
       " {'input': 'The Great Barrier Reef is a natural wonder.', 'label': True},\n",
       " {'input': 'city lights twinkling in the night sky', 'label': False},\n",
       " {'input': 'Paris is known as the City of Love.', 'label': True},\n",
       " {'input': 'New York City is known as the Big Apple.', 'label': True},\n",
-      " {'input': 'THE OLYMPICS CELEBRATE ATHLETIC EXCELLENCE.', 'label': True},\n",
+      " {'input': 'THE OLYMPICS CELEBRATE ATHLETIC EXCELLENCE.', 'label': False},\n",
       " {'input': 'Learning a musical instrument requires patience.', 'label': False},\n",
       " {'input': 'THE UNIVERSE IS VAST AND MYSTERIOUS.', 'label': False},\n",
       " {'input': 'reading opens doors to new worlds.', 'label': False},\n",
@@ -397,12 +408,12 @@
       " {'input': 'mindfulness brings focus to the present moment.', 'label': False},\n",
       " {'input': \"traveling broadens one's perspective.\", 'label': False},\n",
       " {'input': 'solving riddles stimulates the brain.', 'label': False},\n",
-      " {'input': 'SCIENCE AND TECHNOLOGY ARE DRIVING INNOVATION.', 'label': True},\n",
+      " {'input': 'SCIENCE AND TECHNOLOGY ARE DRIVING INNOVATION.', 'label': False},\n",
       " {'input': 'Practicing yoga improves flexibility and strength.',\n",
       "  'label': False},\n",
       " {'input': 'mountain peaks towering above the clouds', 'label': False},\n",
       " {'input': 'THE RAINBOW BRINGS JOY AFTER THE RAIN.', 'label': False},\n",
-      " {'input': 'PYTHON IS A POPULAR PROGRAMMING LANGUAGE.', 'label': True},\n",
+      " {'input': 'PYTHON IS A POPULAR PROGRAMMING LANGUAGE.', 'label': False},\n",
       " {'input': 'THE MOUNTAINS ARE MAJESTIC AND GRAND.', 'label': False},\n",
       " {'input': 'Glowing embers in the fireplace', 'label': False},\n",
       " {'input': 'The Sydney Harbour Bridge is an iconic landmark in Australia.',\n",
@@ -421,7 +432,7 @@
       " {'input': 'Traveling to new countries broadens cultural understanding.',\n",
       "  'label': False},\n",
       " {'input': 'FRIENDSHIP IS LIKE A SHINING STAR IN THE DARK.', 'label': False},\n",
-      " {'input': 'THE FLOWERS BLOOM IN SPRING.', 'label': True},\n",
+      " {'input': 'THE FLOWERS BLOOM IN SPRING.', 'label': False},\n",
       " {'input': 'bicycling is a great way to stay active.', 'label': False},\n",
       " {'input': 'READING OPENS DOORS TO NEW WORLDS.', 'label': False},\n",
       " {'input': 'CURIOSITY LEADS TO DISCOVERY.', 'label': False},\n",
@@ -438,7 +449,7 @@
       " {'input': 'Glistening in the morning dew', 'label': False},\n",
       " {'input': 'green tea has many health benefits.', 'label': False},\n",
       " {'input': 'practicing gratitude leads to a positive mindset.', 'label': False},\n",
-      " {'input': 'javaScript is essential for web development.', 'label': True},\n",
+      " {'input': 'javaScript is essential for web development.', 'label': False},\n",
       " {'input': 'SUCCESS IS A JOURNEY, NOT A DESTINATION.', 'label': False},\n",
       " {'input': 'SWIRLING IN THE AFTERNOON BREEZE', 'label': False},\n",
       " {'input': 'the scent of pine trees in the mountain air', 'label': False},\n",
@@ -449,7 +460,7 @@
       " {'input': 'THE OCEAN WAVES CRASH AGAINST THE SHORE.', 'label': False},\n",
       " {'input': 'laughter is contagious and brings joy.', 'label': False},\n",
       " {'input': 'writing allows thoughts to come to life.', 'label': False},\n",
-      " {'input': 'THE STARS TWINKLE IN THE NIGHT SKY.', 'label': True},\n",
+      " {'input': 'THE STARS TWINKLE IN THE NIGHT SKY.', 'label': False},\n",
       " {'input': 'ancient artifacts telling stories of the past', 'label': False}]\n"
      ]
     }
@@ -461,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,30 +485,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 0.9555555555555556,\n",
-      " 'correct': 86,\n",
+      "{'accuracy': 0.9444444444444444,\n",
+      " 'correct': 85,\n",
       " 'corrupted': 0,\n",
       " 'false': 64,\n",
-      " 'incorrect': 4,\n",
+      " 'incorrect': 5,\n",
       " 'mismatch': 0,\n",
-      " 'precision': 0.8928571428571429,\n",
-      " 'recall': 0.9615384615384616,\n",
+      " 'precision': 1.0,\n",
+      " 'recall': 0.8076923076923077,\n",
       " 'total': 90,\n",
       " 'true': 26}\n",
-      "{'accuracy': 0.8666666666666667,\n",
-      " 'correct': 78,\n",
+      "{'accuracy': 0.9444444444444444,\n",
+      " 'correct': 85,\n",
       " 'corrupted': 0,\n",
       " 'false': 70,\n",
-      " 'incorrect': 12,\n",
+      " 'incorrect': 5,\n",
       " 'mismatch': 0,\n",
-      " 'precision': 0.6428571428571429,\n",
+      " 'precision': 0.8571428571428571,\n",
       " 'recall': 0.9,\n",
       " 'total': 90,\n",
       " 'true': 20}\n",
@@ -522,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4238"
+       "4554"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
